fix(theme): black color exists in both light and dark, fix e mixin, fix button vertical-align issue

--- a/packages/theme/src/scss/mixins/bem.scss
+++ b/packages/theme/src/scss/mixins/bem.scss
@@ -1,4 +1,5 @@
 @use 'config';
+@use 'function' as *;
 @use 'sass:map';
 
 @mixin where {
@@ -27,13 +28,16 @@
 }
 
 // element
-@mixin e($element, $underParent: false) {
+@mixin e($element, $underParent: null) {
   // $E: $element !global;
   $selector: &;
   $E: #{$B + config.$element-separator + $element} !global;
   $currentSelector: #{'.' + $E};
 
-  @if $underParent or hitAllSpecialNestRule($selector) {
+  @if $underParent == null {
+    $underParent: hitAllSpecialNestRule($selector);
+  }
+  @if $underParent {
     @at-root {
       #{$selector} {
         #{$currentSelector} {
